--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -14,3 +14,22 @@ $GRAY400: #29292E;
 $BLACK: #09090A;
 $BLACK-ALT: #121214;
 $BLACK-ALT-REVERSE: #202024;
+
+@key-frames SlideUp {
+	from {
+		bottom: -100%;
+	}
+	to {
+		bottom: 0;
+	}
+}
+
+@key-frames SlideDown {	
+	from {  
+		bottom: -100%; 
+	}
+
+	to {
+		bottom: 0;
+	}
+}
